# Notes

./: .gitmodules  CMakeLists.txt  LICENSE
include/editor/: editor.hpp  ogl.hpp  window.hpp
src/: main.cpp
src/editor/: editor.cpp  window.cpp
